Last entry skeleton.

--- a/src/app/news/news.component.html
+++ b/src/app/news/news.component.html
@@ -1,3 +1,2 @@
-<div class="container my-5">
-  <app-news-carousel></app-news-carousel>
-</div>
+<app-news-carousel></app-news-carousel>
+<app-news-last-entry></app-news-last-entry>
