--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,3 +4,8 @@
 
 // Font awesome
 @import "../node_modules/font-awesome/css/font-awesome.min.css";
+
+// Global
+.container {
+    max-width: 1200px;
+}
