Navbar responsiveness beginning.

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,18 +1,68 @@
-.container-fluid {
-    background: url("../../assets//headerBackground.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 450px;
-    background-position: bottom;
-  
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  
-    h1 {
-      font-family: "Charmonman", cursive;
-      font-size: 5em;
-      font-weight: 800;
-    }
-  }
-  
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .container-fluid {
+//     background: url("../../assets//headerBackground.png");
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     height: 450px;
+//     background-position: bottom;
+//   }
+
+// .container-fluid {
+
+//   .hdr-l {
+//     background: url("../../assets/headerBackgroundLeft.jpg");
+//     background-position-x: left;
+//     background-position-y: top;
+//     height: 450px;
+//     background-size: 30vw;
+//     background-repeat: no-repeat;
+//   }
+
+//   .hdr-c {
+//     background: url("../../assets/headerBackgroundCenter.jpg");
+//     background-position: center;
+//     height: 450px;
+//     background-size: 30vw;
+//     background-repeat: no-repeat;
+//   }
+
+//   .hdr-r {
+//     background: url("../../assets/headerBackgroundRight.jpg");
+//     background-position-x: right;
+//     background-position-y: bottom;
+//     height: 450px;
+//     background-size: 25vw;
+//     background-repeat: no-repeat;
+//   }
+
+// }
