--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,33 +1,38 @@
 <nav class="navbar navbar-expand-md navbar-light bg-white">
-  <ul class="navbar-nav mx-auto text-center">
-    <li class="nav-item mx-1" ngbDropdown>
-      <a class="nav-link" id="nav-dropdown-1" ngbDropdownToggle>
-        O PROJEKCIE
-      </a>
-      <div ngbDropdownMenu>
-        <a class="dropdown-item" [routerLink]="['/about']">Historia i cel</a>
-      </div>
-    </li>
-    <li class="nav-item mx-1">
-      <a class="nav-link" [routerLink]="['/news']">AKTUALNOŚCI</a>
-    </li>
-    <li class="nav-item mx-1">
-      <a class="nav-link" [routerLink]="['/gallery']">GALERIA</a>
-    </li>
-    <li class="nav-item mx-1">
-      <a class="nav-link" [routerLink]="['/team']">O NAS</a>
-    </li>
-    <li class="nav-item mx-1" ngbDropdown>
-      <a class="nav-link" id="nav-dropdown-2" ngbDropdownToggle>
-        ZAINSPIRUJ!
-      </a>
-      <div ngbDropdownMenu>
-        <a class="dropdown-item" [routerLink]="['/visitors']">Odwiedzili nas</a>
-        <a class="dropdown-item" [routerLink]="['/skirtchat']">#skirtchat</a>
-      </div>
-    </li>
-    <li class="nav-item mx-1">
-      <a class="nav-link" [routerLink]="['/contact']">KONTAKT</a>
-    </li>
-  </ul>
+  <button type="button" class="btn btn-primary navbar-toggler mx-auto" (click)="isCollapsed = !isCollapsed">
+    MENU
+  </button>
+  <div class="collapse navbar-collapse" [ngClass]="isCollapsed ? 'd-block' : 'd-none'">
+    <ul class="navbar-nav mx-auto text-center">
+      <li class="nav-item mx-1" ngbDropdown>
+        <a class="nav-link" id="nav-dropdown-1" ngbDropdownToggle>
+          O PROJEKCIE
+        </a>
+        <div ngbDropdownMenu>
+          <a class="dropdown-item" [routerLink]="['/about']">Historia i cel</a>
+        </div>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" [routerLink]="['/news']">AKTUALNOŚCI</a>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" [routerLink]="['/gallery']">GALERIA</a>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" [routerLink]="['/team']">O NAS</a>
+      </li>
+      <li class="nav-item mx-1" ngbDropdown>
+        <a class="nav-link" id="nav-dropdown-2" ngbDropdownToggle>
+          ZAINSPIRUJ!
+        </a>
+        <div ngbDropdownMenu>
+          <a class="dropdown-item" [routerLink]="['/visitors']">Odwiedzili nas</a>
+          <a class="dropdown-item" [routerLink]="['/skirtchat']">#skirtchat</a>
+        </div>
+      </li>
+      <li class="nav-item mx-1">
+        <a class="nav-link" [routerLink]="['/contact']">KONTAKT</a>
+      </li>
+    </ul>
+  </div>
 </nav>
