--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
-<div class="container-fluid">
-  <h1 class="text-center">Projekt w spódnicy</h1>
+<div class="container-fluid px-0">
+    <img src="../../assets/headerBackground.png" class="img-fluid" alt="Responsive image">
 </div>
