--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,6 +1,12 @@
 .navbar {
-  .nav-item {
+  .nav-link,
+  .dropdown-item {
     font-family: 'Open Sans', sans-serif;
+    color: black;
+  }
+  .nav-link:hover,
+  .dropdown-item:hover {
+    color: #00a9ff;
   }
   box-shadow: 0 2px 5px lightgrey;
 }
