Slight carousel change.

--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -1,6 +1,7 @@
 .navbar {
   .nav-link,
-  .dropdown-item {
+  .dropdown-item,
+  .navbar-toggler {
     font-family: 'Open Sans', sans-serif;
     color: black;
   }
