--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,3 @@
 <div class="container-fluid px-0">
-    <img src="../../assets/headerBackground.png" class="img-fluid" alt="Responsive image">
+    <img src="{{headerBackground}}" class="img-fluid" alt="Projekt w spodnicy">
 </div>
