Slight navbar and header changes, last entry component deleted.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,3 +1,13 @@
-<div class="container-fluid px-0">
-    <img src="{{headerBackground}}" class="img-fluid" alt="Projekt w spodnicy">
-</div>
+<!-- <div class="container-fluid px-0">
+    <div class="header-l">
+        <img src="{{headerL}}" class="float-left d-block" alt="Projekt w spodnicy">
+    </div>
+    <div class="header-c">
+        <img src="{{headerC}}" class="mx-auto d-block" alt="Projekt w spodnicy">
+    </div>
+    <div class="header-r">
+        <img src="{{headerR}}" class="float-right d-block" alt="Projekt w spodnicy">
+    </div>
+</div> -->
+
+<img src="{{headerTemp}}" class="img-fluid" alt="Responsive image">
