--- a/src/app/news/news-carousel/news-carousel.component.html
+++ b/src/app/news/news-carousel/news-carousel.component.html
@@ -1,4 +1,4 @@
-<div class="container my-md-5 px-0">
+<div class="container mt-sm-3 mt-md-5 px-0">
     <ngb-carousel class="carousel" *ngIf="images">
         <ng-template ngbSlide>
             <img [src]="images[0]">
