Not important header changes & added posters.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,14 @@
 <!-- <div class="container-fluid px-0">
-    <div class="header-l">
-        <img src="{{headerL}}" class="float-left d-block" alt="Projekt w spodnicy">
-    </div>
-    <div class="header-c">
-        <img src="{{headerC}}" class="mx-auto d-block" alt="Projekt w spodnicy">
-    </div>
-    <div class="header-r">
-        <img src="{{headerR}}" class="float-right d-block" alt="Projekt w spodnicy">
+    <div class="row">
+        <div class="col-3 header-l">
+
+        </div>
+        <div class="col-6 header-c">
+
+        </div>
+        <div class="col-3 header-r">
+
+        </div>
     </div>
 </div> -->
 
