--- a/src/app/news/posters/poster/poster.component.html
+++ b/src/app/news/posters/poster/poster.component.html
@@ -1,3 +1,3 @@
-<div class="card" style="width: 300px;">
-  <img class="card-img-top" src="../../../../assets/posters/pazdziernik.jpg" alt="Card image cap">
+<div class="card">
+  <img class="card-img-top w-100" src="../../../../assets/posters/pazdziernik.jpg" alt="Card image cap">
 </div>
