--- a/src/app/news/posters/posters.component.html
+++ b/src/app/news/posters/posters.component.html
@@ -1,12 +1,12 @@
 <div class="container mt-sm-3 mt-md-5">
   <div class="row">
-    <div class="col-md-4 pl-0">
+    <div class="col-md-4 pl-0 poster-left">
       <app-poster></app-poster>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 poster-center">
       <app-poster></app-poster>
     </div>
-    <div class="col-md-4 pr-0">
+    <div class="col-md-4 pr-0 poster-right">
       <app-poster></app-poster>
     </div>
   </div>
