--- a/src/app/news/posters/posters.component.html
+++ b/src/app/news/posters/posters.component.html
@@ -1,12 +1,12 @@
-<div class="container mt-sm-3 mt-md-5">
+<div class="container">
   <div class="row">
-    <div class="col-md-4 pl-0 poster-left">
+    <div class="col-md-4 poster-left mt-sm-3 mt-md-5">
       <app-poster></app-poster>
     </div>
-    <div class="col-md-4 poster-center">
+    <div class="col-md-4 poster-center mt-sm-3 mt-md-5">
       <app-poster></app-poster>
     </div>
-    <div class="col-md-4 pr-0 poster-right">
+    <div class="col-md-4 poster-right mt-sm-3 mt-md-5">
       <app-poster></app-poster>
     </div>
   </div>
