Fetch poster URL from database.

--- a/src/app/news/posters/posters.component.scss
+++ b/src/app/news/posters/posters.component.scss
@@ -1,31 +1,31 @@
-.poster-left {
-  padding-left: 0px;
-  padding-right: 0px;
-}
+// .poster-left {
+//   padding-left: 0px;
+//   padding-right: 0px;
+// }
 
-.poster-center {
-  padding-left: 0px;
-  padding-right: 0px;
-}
+// .poster-center {
+//   padding-left: 0px;
+//   padding-right: 0px;
+// }
 
-.poster-right {
-  padding-left: 0px;
-  padding-right: 0px;
-}
+// .poster-right {
+//   padding-left: 0px;
+//   padding-right: 0px;
+// }
 
-@media only screen and (min-width: 768px) {
-  .poster-left {
-    padding-left: 0px;
-    padding-right: 30px;
-  }
+// @media only screen and (min-width: 768px) {
+//   .poster-left {
+//     padding-left: 0px;
+//     padding-right: 30px;
+//   }
 
-  .poster-center {
-    padding-left: 15px;
-    padding-right: 15px;
-  }
+//   .poster-center {
+//     padding-left: 15px;
+//     padding-right: 15px;
+//   }
 
-  .poster-right {
-    padding-left: 30px;
-    padding-right: 0px;
-  }
-}
+//   .poster-right {
+//     padding-left: 30px;
+//     padding-right: 0px;
+//   }
+// }
