--- a/src/app/news/posters/posters.component.html
+++ b/src/app/news/posters/posters.component.html
@@ -1,13 +1,7 @@
 <div class="container">
   <div class="row">
-    <div class="col-md-4 poster-left mt-sm-3 mt-md-5">
-      <app-poster></app-poster>
-    </div>
-    <div class="col-md-4 poster-center mt-sm-3 mt-md-5">
-      <app-poster></app-poster>
-    </div>
-    <div class="col-md-4 poster-right mt-sm-3 mt-md-5">
-      <app-poster></app-poster>
+    <div *ngFor="let poster of posters" class="col-md-4 mt-sm-3 mt-md-5">
+        <app-poster [posterDetails]="poster"></app-poster>
     </div>
   </div>
 </div>
