--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,15 +1,15 @@
-<!-- <div class="container-fluid px-0">
+<div class="container-fluid px-0">
     <div class="row">
-        <div class="col-3 header-l">
-
+        <div class="col-2 header-l">
+            <img src="../../assets/header/headerL.png" class="header-l-img float-left" alt="">
         </div>
-        <div class="col-6 header-c">
-
+        <div class="col-8 header-c align-items-center">
+            <img src="../../assets/header/headerC.png" class="header-c-img mx-auto d-block align-middle" alt="">
         </div>
-        <div class="col-3 header-r">
-
+        <div class="col-2 header-r">
+            <img src="../../assets/header/headerR.png" class="header-r-img float-right" alt="">
         </div>
     </div>
-</div> -->
+</div>
 
-<img src="{{headerTemp}}" class="img-fluid" alt="Responsive image">
+<!-- <img src="{{headerTemp}}" class="img-fluid" alt="Responsive image"> -->
