--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
-<div class="container-fluid px-0">
+<div class="container-fluid">
     <div class="row">
-        <div class="col-2 header-l">
+        <div class="col-2 header-l px-0">
             <img src="../../assets/header/headerL.png" class="header-l-img float-left" alt="">
         </div>
-        <div class="col-8 header-c align-items-center">
+        <div class="col-8 header-c align-items-center px-0">
             <img src="../../assets/header/headerC.png" class="header-c-img mx-auto d-block align-middle" alt="">
         </div>
-        <div class="col-2 header-r">
+        <div class="col-2 header-r px-0">
             <img src="../../assets/header/headerR.png" class="header-r-img float-right" alt="">
         </div>
     </div>
