--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,17 @@
-<p>
-  login works!
-</p>
+<div class="container">
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+  
+    <label>
+      First Name:
+      <input type="text" formControlName="username">
+    </label>
+  
+    <label>
+      Last Name:
+      <input type="password" formControlName="password">
+    </label>
+
+    <button type="button" class="btn btn-primary" [disabled]="!loginForm.valid" (click)="onSubmit()">Zaloguj</button>
+  
+  </form>
+</div>
