Navigate to admin page with no header nor navbar after login.

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" *ngIf="!isAuth">
     <div class="row">
         <div class="col-2 header-l px-0">
             <img src="../../assets/header/headerL.png" class="header-l-img float-left" alt="">
