--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light bg-white">
+<nav class="navbar navbar-expand-md navbar-light bg-white" *ngIf="!isAuth">
   <button type="button" class="btn btn-primary navbar-toggler mx-auto ml-sm-3" (click)="isCollapsed = !isCollapsed">
       <i class="fa fa-bars"></i>
   </button>
