--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,13 +1,19 @@
-<div class="container">
-  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-    <label>
-      Login:
-      <input type="text" formControlName="username">
-    </label>
-    <label>
-      Hasło:
-      <input type="password" formControlName="password">
-    </label>
-    <button type="button" class="btn btn-primary" [disabled]="!loginForm.valid" (click)="onSubmit()">Zaloguj</button>
-  </form>
+<div class="container my-2 my-sm-3 my-md-5 px-0">
+  <div class="card card-container mx-auto">
+    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class=" mx-auto d-block">
+      <label class="mt-2 mt-sm-3 mt-md-5">
+        Login:
+        <br>
+        <input type="text" formControlName="username" class="form-control">
+      </label>
+      <br>
+      <label>
+        Hasło:
+        <br>
+        <input type="password" formControlName="password" class="form-control">
+      </label>
+      <br>
+      <button type="button" class="btn btn-primary mx-auto d-block mb-2 mb-sm-3" [disabled]="!loginForm.valid" (click)="onSubmit()">Zaloguj</button>
+    </form>
+  </div>
 </div>
