Logout redirection, improved authentication check.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container my-2 my-sm-3 my-md-5 px-0">
   <div class="card card-container mx-auto">
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class=" mx-auto d-block">
-      <label class="mt-2 mt-sm-3 mt-md-5">
+      <label class="mt-2 mt-sm-3">
         Login:
         <br>
         <input type="text" formControlName="username" class="form-control">
