--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,20 +1,15 @@
 <nb-layout>
     <nb-layout-header fixed>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-6 text-middle">
-                    <p>
-                        Projekt w spódnicy
-                    </p>
-                </div>
-                <div class="col-6">
-                    <button nbButton (click)="logout()" class="float-right">Wyloguj</button>
-                </div>
-            </div>
+        <div class="container-fluid px-0">
+            <app-header></app-header>
         </div>
     </nb-layout-header>
 
-    <nb-sidebar>Sidebar Content</nb-sidebar>
+    <nb-sidebar>
+        <app-sidebar></app-sidebar>
+    </nb-sidebar>
 
-    <nb-layout-column>Page Content</nb-layout-column>
+    <nb-layout-column>
+        <app-content></app-content>
+    </nb-layout-column>
 </nb-layout>
