Beginning of admin routing.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -11,7 +11,7 @@
         <a class="nav-link" id="nav-dropdown-1" ngbDropdownToggle>
           O PROJEKCIE
         </a>
-        <div ngbDropdownMenu>
+        <div ngbDropdownMenu class="mt-2">
           <a class="dropdown-item" [routerLink]="['/about']">Historia i cel</a>
         </div>
       </li>
@@ -22,7 +22,7 @@
         <a class="nav-link" id="nav-dropdown-2" ngbDropdownToggle>
           ZAINSPIRUJ!
         </a>
-        <div ngbDropdownMenu>
+        <div ngbDropdownMenu class="mt-2">
           <a class="dropdown-item" [routerLink]="['/visitors']">Odwiedzili nas</a>
           <a class="dropdown-item" [routerLink]="['/skirtchat']">#skirtchat</a>
         </div>
