--- a/src/app/admin/content/posters/posters.component.html
+++ b/src/app/admin/content/posters/posters.component.html
@@ -1,3 +1,8 @@
-<p>
-  posters works!
-</p>
+<nb-tabset>
+  <nb-tab tabTitle="Lista plakatów">
+    Tab content 1
+  </nb-tab>
+  <nb-tab tabTitle="Nowy plakat">
+    Tab content 2
+  </nb-tab>
+</nb-tabset>
