--- a/src/app/admin/sidebar/sidebar.component.html
+++ b/src/app/admin/sidebar/sidebar.component.html
@@ -1,3 +1,5 @@
-<p>
-    sidebar works!
-</p>
+<nb-card>
+    <nb-card-body>
+        <nb-menu [items]="items"></nb-menu>
+    </nb-card-body>
+</nb-card>
