Token HTTP interceptor, poster list display.

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -5,7 +5,7 @@
         </div>
     </nb-layout-header>
 
-    <nb-sidebar>
+    <nb-sidebar responsive collapsedBreakpoints="xs, is, sm, md" compactedBreakpoints="">
         <app-sidebar></app-sidebar>
     </nb-sidebar>
 
