--- a/src/app/admin/content/posters/posters.component.html
+++ b/src/app/admin/content/posters/posters.component.html
@@ -1,6 +1,24 @@
 <nb-tabset>
   <nb-tab tabTitle="Lista plakatów">
-    Tab content 1
+    <div class="mt-3">
+      <nb-card *ngFor="let poster of postersList">
+        <nb-card-body>
+          <div class="container-fluid">
+            <div class="row">
+              <div class="col-12 col-lg-4">
+                {{poster.description}}
+              </div>
+              <div class="col-12 col-lg-4">
+                {{poster.happensAt}}
+              </div>
+              <div class="col-12 col-lg-4">
+                Przyciski
+              </div>
+            </div>
+          </div>
+        </nb-card-body>
+      </nb-card>
+    </div>
   </nb-tab>
   <nb-tab tabTitle="Nowy plakat">
     Tab content 2
