Sidebar toggle & responsiveness.

--- a/src/app/admin/header/header.component.html
+++ b/src/app/admin/header/header.component.html
@@ -1,10 +1,11 @@
 <div class="row">
     <div class="col-6">
-        <p>
+        <i class="fa fa-bars d-inline-block text-center py-4" (click)="toggleSidebar()"></i>
+        <p class="d-none d-sm-inline-block ml-4">
             Projekt w spódnicy
         </p>
     </div>
     <div class="col-6">
-        <button nbButton (click)="logout()" class="float-right d-inline-block">Wyloguj</button>
+        <button nbButton (click)="logout()" class="float-right d-inline-block my-3">Wyloguj</button>
     </div>
 </div>
