--- a/src/app/admin/header/header.component.scss
+++ b/src/app/admin/header/header.component.scss
@@ -1,9 +1,8 @@
-p {
-    font-size: 4vw;
-}
-
-@media only screen and (min-width: 576px) {
+.row {
     p {
-        font-size: 1.7em;
+      font-size: 1.5em;
+    }
+    i {
+        font-size: 2em;
     }
 }
