--- a/src/app/admin/content/a-news/a-news.component.html
+++ b/src/app/admin/content/a-news/a-news.component.html
@@ -1,26 +1,19 @@
 <nb-tabset>
-  <nb-tab tabTitle="Plakaty">
+  <nb-tab tabTitle="Posty">
     <div class="mt-3">
-      <nb-card *ngFor="let poster of postersList">
-        <nb-card-body>
-          <div class="container-fluid">
-            <div class="row">
-              <div class="col-12 col-lg-4">
-                {{poster.description}}
-              </div>
-              <div class="col-12 col-lg-4">
-                {{poster.happensAt | date :'dd-MM-yy HH:mm' }}
-              </div>
-              <div class="col-12 col-lg-4">
-                Przyciski
-              </div>
-            </div>
-          </div>
-        </nb-card-body>
-      </nb-card>
+      <p>
+        Tu będzie lista postów
+      </p>
     </div>
   </nb-tab>
-  <!-- <nb-tab tabTitle="Nowy plakat">
-    Tab content 2
-  </nb-tab> -->
+  <nb-tab tabTitle="Wydarzenia">
+    <div class="mt-3">
+      <p>
+        Tu będzie lista wydarzeń
+      </p>
+    </div>
+  </nb-tab>
+  <nb-tab tabTitle="Plakaty">
+    <app-a-posters></app-a-posters>
+  </nb-tab>
 </nb-tabset>
