--- a/src/app/admin/content/home/home.component.html
+++ b/src/app/admin/content/home/home.component.html
@@ -1,3 +1,3 @@
 <p>
-  home works!
+  Tu znajdą się przypomnienia o wstawieniu plakatu / wydarzenia, relacji z odbytego wydarzenia, podstawowe dane itp.
 </p>
