--- a/src/app/admin/content/a-news/a-posters/a-posters.component.scss
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.scss
@@ -1,3 +1,17 @@
 .newPoster {
     height: 200px;
 }
+
+.existingPoster {
+    height: 200px;
+}
+
+img {
+    height: 100px;
+}
+
+@media only screen and (min-width: 576px) {
+    .existingPoster {
+        height: 140px;
+    }
+}
