--- a/src/app/admin/content/home/home.component.html
+++ b/src/app/admin/content/home/home.component.html
@@ -1,3 +1,6 @@
 <p>
   Tu znajdą się przypomnienia o wstawieniu plakatu / wydarzenia, relacji z odbytego wydarzenia, podstawowe dane itp.
 </p>
+<p>
+  Jak dam radę to może jakiś wykresik czy coś xD
+</p>
