ng2-smart-table template.

--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -1,5 +1,5 @@
 <div class="mt-3">
-  <nb-card class="newPoster">
+  <!-- <nb-card class="newPoster">
     <nb-card-body>
       Wstaw nowy plakat
     </nb-card-body>
@@ -28,5 +28,6 @@
         </div>
       </div>
     </nb-card-body>
-  </nb-card>
+  </nb-card> -->
+  <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
 </div>
