--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container my-2 my-sm-3 my-md-5 px-0">
   <div class="card card-container mx-auto">
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()" class=" mx-auto d-block">
+    <form [formGroup]="loginForm" (keydown)="keyDownFunction($event)" class="mx-auto d-block">
       <label class="mt-2 mt-sm-3">
         Login:
         <br>
