--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -3,15 +3,7 @@
   <!-- <input #file type="file" (change)="pick(file.files)" />
   <button class="btn btn-primary" (click)="upload()">Wyślij</button> -->
 
-  <div class="input-group my-4">
-    <div class="custom-file">
-      <input nbInput #file type="file" class="custom-file-input" id="inputGroupFile04" (change)="pick(file.files)" aria-describedby="inputGroupFileAddon04">
-      <label class="custom-file-label" for="inputGroupFile04">Wybierz plik...</label>
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04" (click)="upload()">Wyślij</button>
-    </div>
-  </div>
+  <app-a-posters-photo-edit></app-a-posters-photo-edit>
 
   <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
 </div>
