--- a/src/app/admin/content/a-news/a-posters/a-posters.component.scss
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.scss
@@ -1,29 +1,3 @@
-<<<<<<< HEAD
-=======
-.newPoster {
-  height: 200px;
+.custom-file-input:lang(en) ~ .custom-file-label::after {
+  content: none;
 }
-.existingPoster {
-  height: 250px;
-  img {
-    height: 100px;
-  }
-  .trash {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  i {
-    font-size: 5em;
-  }
-  i:hover {
-    color: red;
-  }
-}
-
-@media only screen and (min-width: 576px) {
-  .existingPoster {
-    height: 140px;
-  }
-}
->>>>>>> parent of 7f141ec... File input looks slightly better.
