--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -8,17 +8,39 @@
       Dodaj nowy plakat:
     </nb-card-header>
     <nb-card-body>
+      <div class="container">
+        <div class="row">
+          <div class="col-sm-6">
+            <p>Tutaj będzie podgląd</p>
+          </div>
+          <div class="col-sm-6">
+            <form [formGroup]="posterForm" (keydown)="keyDownFunction($event)" class="mx-auto d-block">
+              <label class="mt-2 mt-sm-3">
+                <p>Opis:</p>
+                <input type="text" formControlName="description" class="form-control  ">
+              </label>
+              <br>
+              <label>
+                <p>Data wydarzenia:</p>
+                <input type="text" formControlName="happensAt" class="form-control">
+              </label>
+              <br>
+            </form>
 
-      <div class="input-group my-4">
-        <div class="custom-file">
-          <input nbInput #file type="file" class="custom-file-input" id="inputGroupFile04" (change)="pick(file.files)"
-            aria-describedby="inputGroupFileAddon04">
-          <label class="custom-file-label" for="inputGroupFile04">Wybierz plik...</label>
-        </div>
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04" (click)="upload()">Wyślij</button>
+            <div class="input-group my-4">
+              <div class="custom-file">
+                <input nbInput #file type="file" class="custom-file-input" id="inputGroupFile04" (change)="pick(file.files)"
+                  aria-describedby="inputGroupFileAddon04">
+                <label class="custom-file-label" for="inputGroupFile04">Wybierz plik...</label>
+              </div>
+              <div class="input-group-append">
+                <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04" (click)="upload()">Wyślij</button>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
+
     </nb-card-body>
   </nb-card>
 
