--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -1,19 +1,4 @@
 <div class="mt-3">
-
-  <!-- <input #file type="file" (change)="pick(file.files)" />
-  <button class="btn btn-primary" (click)="upload()">Wyślij</button>
-
-  <div class="input-group my-4">
-    <div class="custom-file">
-      <input nbInput #file type="file" class="custom-file-input" id="inputGroupFile04" (change)="pick(file.files)"
-        aria-describedby="inputGroupFileAddon04">
-      <label class="custom-file-label" for="inputGroupFile04">Wybierz plik...</label>
-    </div>
-    <div class="input-group-append">
-      <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04" (click)="upload()">Wyślij</button>
-    </div>
-  </div> -->
-
   <nb-card>
     <nb-card-header>
       Dodaj nowy plakat:
@@ -21,14 +6,11 @@
     <nb-card-body>
       <div class="container">
         <div class="row">
-          <div class="col-sm-6">
-            <p>Tutaj będzie podgląd</p>
-          </div>
-          <div class="col-sm-6">
+          <div class="col">
             <form [formGroup]="posterForm" class="mx-auto d-block">
               <label class="mt-2 mt-sm-3">
                 <p>Opis:</p>
-                <input type="text" formControlName="description" class="form-control  ">
+                <input type="text" formControlName="description" class="form-control">
               </label>
               <br>
               <label>
@@ -36,15 +18,12 @@
                 <input type="text" formControlName="happensAt" class="form-control">
               </label>
               <br>
+              <input type="file" formControlName="file" (change)="onFileChange($event)" />
+              <button type="submit" class="btn btn-primary" [disabled]="posterForm.invalid || posterForm.prestine">Dodaj nowy plakat</button>
             </form>
-
-            <input #file type="file" (change)="pick(file.files)" />
-            <button class="btn btn-primary" (click)="upload()">Wyślij</button>
-
           </div>
         </div>
       </div>
-
     </nb-card-body>
   </nb-card>
 
