--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,13 +7,8 @@
       <li class="nav-item mx-1">
         <a class="nav-link" [routerLink]="['/news']">AKTUALNOŚCI</a>
       </li>
-      <li class="nav-item mx-1" ngbDropdown>
-        <a class="nav-link" id="nav-dropdown-1" ngbDropdownToggle>
-          O PROJEKCIE
-        </a>
-        <div ngbDropdownMenu class="mt-2">
-          <a class="dropdown-item" [routerLink]="['/about']">Historia i cel</a>
-        </div>
+      <li class="nav-item mx-1">
+        <a class="nav-link" [routerLink]="['/about']">O PROJEKCIE</a>
       </li>
       <li class="nav-item mx-1">
         <a class="nav-link" [routerLink]="['/gallery']">GALERIA</a>
