--- a/src/app/news/posters/posters.component.html
+++ b/src/app/news/posters/posters.component.html
@@ -1,16 +1,16 @@
 <div class="container">
   <div class="row">
-    <div class="col-sm-4 my-sm-2 my-md-3 my-lg-5 poster-left">
+    <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-left">
       <div class="card">
         <img class="card-img-top" src="{{posters[0].posterPhotoUrl}}" alt="Card image cap">
       </div>
     </div>
-    <div class="col-sm-4 my-sm-2 my-md-3 my-lg-5 poster-center">
+    <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-center">
       <div class="card">
         <img class="card-img-top" src="{{posters[1].posterPhotoUrl}}" alt="Card image cap">
       </div>
     </div>
-    <div class="col-sm-4 my-sm-2 my-md-3 my-lg-5 poster-right">
+    <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-right">
       <div class="card">
         <img class="card-img-top" src="{{posters[2].posterPhotoUrl}}" alt="Card image cap">
       </div>
