--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -12,7 +12,13 @@
               <input type="text" formControlName="description" class="form-control">
               <br>
               <p>Data wydarzenia:</p>
-              <input type="text" formControlName="happensAt" class="form-control">
+              <input type="date" formControlName="happensAt" class="form-control">
+              <br>
+              <p>Plik</p>
+              <input type="file" formControlName="file" class="form-control">
+              <br>
+              <p>Widoczność:</p>
+              <input type="checkbox" formControlName="visible" class="form-control">
               <br>
             </form>
           </div>
@@ -23,7 +29,8 @@
             </div>
           </div>
           <div class="col-12">
-            <button type="submit" class="btn btn-primary mt-2 mt-sm-3" [disabled]="posterForm.invalid || posterForm.pristine">
+            <button type="submit" class="btn btn-primary mt-2 mt-sm-3" (click)="this.onSubmit()">
+              <!-- [disabled]="posterForm.invalid || posterForm.pristine" -->
               Dodaj nowy plakat
             </button>
           </div>
