--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -40,7 +40,7 @@
         Plakaty w bazie danych:
       </nb-card-header>
       <nb-card-body>
-        <ng2-smart-table [settings]="settings" [source]="data"></ng2-smart-table>
+        <ng2-smart-table [settings]="settings" [source]="source"></ng2-smart-table>
       </nb-card-body>
     </nb-card>
 </div>
