--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<button (click)="openFormModal()">Open Modal</button>
 <app-header></app-header>
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
