--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -34,14 +34,13 @@
       </div>
     </nb-card-body>
   </nb-card>
-  
+
   <nb-card>
     <nb-card-header>
       Plakaty w bazie danych:
     </nb-card-header>
     <nb-card-body>
-      <ng2-smart-table [settings]="settings" [source]="source" (custom)="onCustom($event)" (edit)="onEdit($event)"
-        (delete)="onDelete($event)"></ng2-smart-table>
+      <ng2-smart-table [settings]="settings" [source]="source" (custom)="onCustom($event)" (edit)="onEdit($event)" (delete)="onDelete($event)"></ng2-smart-table>
     </nb-card-body>
   </nb-card>
 </div>
