--- a/src/app/news/posters/posters.component.html
+++ b/src/app/news/posters/posters.component.html
@@ -2,17 +2,17 @@
   <div class="row">
     <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-left">
       <div class="card">
-        <img class="card-img-top" src="{{posters[0].posterPhotoUrl}}" alt="Poster">
+        <img class="card-img-top" src="http://localhost:5000/{{posters[0].posterPhotoUrl}}" alt="Poster">
       </div>
     </div>
     <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-center">
       <div class="card">
-        <img class="card-img-top" src="{{posters[1].posterPhotoUrl}}" alt="Poster">
+        <img class="card-img-top" src="http://localhost:5000/{{posters[1].posterPhotoUrl}}" alt="Poster">
       </div>
     </div>
     <div class="col-sm-4 mt-sm-2 mt-md-3 mt-lg-5 poster-right">
       <div class="card">
-        <img class="card-img-top" src="{{posters[2].posterPhotoUrl}}" alt="Poster">
+        <img class="card-img-top" src="http://localhost:5000/{{posters[2].posterPhotoUrl}}" alt="Poster">
       </div>
     </div>
   </div>
