Load poster to delete as an object.

--- a/src/app/admin/content/a-news/a-posters/a-posters.component.html
+++ b/src/app/admin/content/a-news/a-posters/a-posters.component.html
@@ -50,7 +50,7 @@
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
   </div>
   <div class="modal-body">
-    <p>Na pewno usunąć plakat "{{selectedPosterDescription}}"?</p>
+    <p>Na pewno usunąć plakat "{{selectedPoster.description}}"?</p>
     <p>
       Tej operacji <strong class="text-danger"> nie da się cofnąć!</strong>
     </p>
